<resources>
    <string name="hockey_id">f081baa0ebe390a9d1887ea61fe652c4</string>
    <string name="app_name">MakeItFlow</string>
    <string name="skip_tour_and_get_started_button_text">Skip tour and get started</string>
    <string name="lets_get_started_button_text">Let\'s get started</string>
    <string name="log_in_title">Log in</string>
    <string name="log_in_button_text">Log in</string>
    <string name="sign_up_title">Sign up</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="static_ip_hint">Static IP</string>
    <string name="static_dns">DNS</string>
    <string name="static_netmask">Netmask</string>
    <string name="static_gateway">Gateway</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="title_activity_flow">FlowActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_devices_message">You don\'t have any registered devices yet.\n Let\'s get started.</string>
    <string name="no_connection">No internet connection.\nPlease check your WiFi.</string>
    <string name="remove">Remove</string>
    <string name="interactive_mode">Map</string>
    <string name="activity_logs">Activity Logs</string>
    <string name="application_logs">Application Logs</string>
    <string name="activity_log_entries">Activity Log Entries</string>
    <string name="connected_devices">Connected devices</string>
    <string name="setup_device">Set up a device</string>
    <string name="setup_device_button_text">Set up a device</string>
    <string name="configure_wifi">Configure Wi-Fi</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>
    <string name="connect_button_text">Connect</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="flow_cloud_forum">FlowCloud forum</string>
    <string name="using_the_board">Using the board</string>
    <string name="using_the_app">Using the application</string>
    <string name="device_setup">Device setup</string>
    <string name="wireless_network">Wi-Fi network</string>
    <string name="introduction">Introduction</string>
    <string name="retrieve_logs">Retrieve logs</string>
    <string name="setup_mode">Setup mode</string>
    <string name="select_device">Select device</string>
    <string name="log_in_to_wifi">Log in to WiFi</string>
    <string name="log_in_to_device">Log in to device</string>
    <string name="wep">WEP</string>
    <string name="wpa">WPA</string>
    <string name="wpa2">WPA2</string>
    <string name="open">Open</string>
    <string name="dhcp">dhcp</string>
    <string name="dhcp_upper_letters">DHCP</string>
    <string name="static_ip">static</string>
    <string name="static_ip_upper_first_letter">Static</string>
    <string name="provide_static_configuration">Provide static IP configuration</string>
    <string name="apply">Apply</string>
    <string name="restart_device_in_network_mode_button_text">Restart device in Wi-Fi mode</string>
    <string name="ip">IP</string>
    <string name="dns">DNS</string>
    <string name="netmask">Netmask</string>
    <string name="gateway_address">Gateway address</string>
    <string name="device_details">Device Details</string>
    <string name="mac">MAC address</string>
    <string name="serial_number_abbreviation">SN</string>
    <string name="device_type">Device type</string>
    <string name="software_version">SW version</string>
    <string name="name">Name</string>
    <string name="give_your_device_a_name">Give your device a name</string>
    <string name="device_name_required">Device name may not be empty</string>
    <string name="interact_with_selected_button_text">Interact with selected</string>
    <string name="clear_leds">CLEAR LEDS</string>
    <string name="commands_button_text">Commands</string>
    <string name="messages_button_text">Messages</string>
    <string name="send_button_text">Send</string>
    <string name="search_users">Search users</string>
    <string name="type_a_message">Type a message</string>
    <string name="select_command">Select command</string>
    <string name="new_name_of_your_device">New name of your device</string>
    <string name="please_wait_with_dots">Please wait …</string>
    <string name="logging_in">Logging in…</string>
    <string name="signing_up">Signing up…</string>
    <string name="logging_out">Logging out…</string>
    <string name="message_send_other_problem">Message send has failed due to other problems</string>
    <string name="connectivity_problems">Flow connectivity problems</string>
    <string name="title_activity_search_users">SearchUsersActivity</string>
    <string name="search_hint">User\'s name…</string>
    <string name="interact_with_your_device">Interact with your device via <b>FlowCloud</b></string>
    <string name="login_to_flow_cloud">Log in to <b>FlowCloud</b></string>
    <string name="configure_your_device">Configure your device</string>
    <string name="welcome">Welcome</string>
    <string name="root_url">FlowCloud root URL</string>
    <string name="oAuthKey">FlowCloud licensee key</string>
    <string name="oAuthSecret">FlowCloud licensee secret</string>
    <string name="wifire_url">Wi•Fire board URL</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="email_address_is_required">Email address is required!</string>
    <string name="password_is_required">Password is required!</string>
    <string name="username_too_short">Username must be longer than 5 characters</string>
    <string name="wireless_name_is_required">Wi-Fi name is required!</string>
    <string name="static_ip_is_required">IP is required!</string>
    <string name="dns_is_required">DNS is required!</string>
    <string name="netmask_is_required">Netmask is required!</string>
    <string name="gateway_is_required">Gateway is required!</string>
    <string name="my_device">My WiFire</string>
    <string name="not_appropriate_transfer_protocol">Not http, nor https protocol of URL</string>
    <string name="incorrect_field_character_count">Incorrect field characters count</string>
    <string name="incorrect_password_character_count">Incorrect password characters count</string>
    <string name="make_it_flow">MakeItFlow</string>
    <string name="C_letter">C</string>
    <string name="about_you_can_use">You can use the MakeItFlow app to connect
      your device to the FlowCloud platform from your smartphone or tablet.
      Once connected, you will then be able to manage any devices that are registered to your FlowCloud account.</string>
    <string name="about_makeitflow_trademarks">MakeItFlow, the MakeItFlow logo, FlowCloud, the FlowCloud logo, Imagination Technologies,
      and the Imagination Technologies logo are trademarks or registered trademarks of Imagination Technologies Limited.</string>
    <string name="about_all_other_products">All other product names are trademarks of their respective companies.</string>
    <string name="help_introduction_information">You can use the MakeItFlow app to connect any supported devices
      to the FlowCloud platform from your smartphone or tablet. Once connected, you will then be able to use the
      app to manage any supported devices that are registered to your FlowCloud account.</string>
    <string name="wifire">Wi•Fire</string>
    <string name="help_wifi_network_information">Wi•Fire board has two modes, Wi-Fi connected and Wi-Fi setup. </string>
    <string name="wifi_setup_mode">Wi-Fi setup mode</string>
    <string name="help_wifi_network_information_setup_mode">Wi-Fi setup mode is used to configure the Wi•Fire board from the MakeITFlow app so that it can communicate with FlowCloud. Your Wi•Fire board should be shipped from the factory in Wi-Fi setup mode.</string>
    <string name="wifi_connected_mode">Wi-Fi connected mode</string>
    <string name="help_wifi_network_information_connected_mode">Wi-Fi connected mode is used by Wi•Fire board to communicate with other devices using FlowCloud.</string>
    <string name="wifire_board">Wi•Fire board</string>
    <string name="tap_menu_button">1.	Tap the <b>Menu</b> button.</string>
    <string name="tap_set_up_a_device">2.	Tap  <b>Setup a device</b> from the list of options.</string>
    <string name="follow_the_prompts">3.	Follow the prompts on the screen to connect the Wi•Fire board to your network.</string>
    <string name="note_password"><b>Note:</b> You can find the password for your Wi•Fire board on the inside of Wi•Fire\'s box. If you can\'t find the password on the box, you can find out the password by entering the <b>show wifire_details</b> command in the CLI (see the Command Line Interface help topic on the FlowCloud website for more information on using the CLI).</string>
    <string name="find_how_to_use_board">To find out how to use your board after it has been set up, visit our website: </string>
    <string name="your_wifire_board_communicates">Your Wi•Fire board communicates with FlowCloud over the internet, via a wireless access point (WAP) or router. Once connected to FlowCloud, you can use the MakeItFlow app to interact with Wi•Fire board when developing applications.</string>
    <string name="note_about_interacting_with_board"><b>Note:</b> To interact with your Wi•Fire board using the MakeItFlow app, your Wi•Fire board needs to be in Wi-Fi connected mode. Wi•Fire board automatically enters Wi-Fi connected mode after you have successfully completed the setup process.</string>
    <string name="you_can_confirm_your_wifire_board">You can confirm your Wi•Fire board is connected to FlowCloud by checking LD4 on the board. LD4 on the Wi•Fire board will start flashing while trying to connect to FlowCloud. When a connection to FlowCloud has been established, LD4 on the Wi•Fire board will stop flashing and remain steady.</string>
    <string name="selecting_wifire_board_to_interact_with">Selecting a Wi•Fire board to interact with</string>
    <string name="what_connected_devices_screen_displays">The <b>Connected devices</b> screen displays all boards registered to you that have successfully connected to FlowCloud.</string>
    <string name="to_interact_with_board">To interact with one of your connected Wi•Fire boards:</string>
    <string name="tap_connected_devices">2.	Tap <b>Connected devices.</b></string>
    <string name="select_your_wifire_from_the_list">3.	Select your Wi•Fire board from the list.</string>
    <string name="interact_with_selected">4.	Tap the <b>Interact with selected</b> button.</string>
    <string name="running_test_to_confirm">Running a test to confirm that Wi•Fire board is in Wi-Fi connected mode</string>
    <string name="carry_out_of_the_following_check">Carry out the following to check that you can send commands to Wi•Fire board using your Android or iOS device:</string>
    <string name="enter_or_select_command">1.	Enter or select the command that you want to send to Wi•Fire board from the top of the screen.</string>
    <string name="tap_send">2.	Tap <b>Send</b>.</string>
    <string name="check_the_output">3.	Check the output to verify that your Wi•Fire board can receive commands from your Android or iOS device.</string>
    <string name="switching_between_wifis">Switching between Wi-Fi setup and Wi-Fi connected mode</string>
    <string name="signup_conflict">This username or email is already in use</string>
    <string name="log_device_info_error">Did you manage to get there? It means you didn\'t set current WifireDevice yet. It was a must to obtain current device values.</string>
</resources>