<?xml version="1.0" encoding="utf-8"?>


<!--
  ~ <b>Copyright 2014 by Imagination Technologies Limited
  ~ and/or its affiliated group companies.</b>\n
  ~ All rights reserved.  No part of this software, either
  ~ material or conceptual may be copied or distributed,
  ~ transmitted, transcribed, stored in a retrieval system
  ~ or translated into any human or computer language in any
  ~ form by any means, electronic, mechanical, manual or
  ~ other-wise, or disclosed to the third parties without the
  ~ express written permission of Imagination Technologies
  ~ Limited, Home Park Estate, Kings Langley, Hertfordshire,
  ~ WD4 8LZ, U.K.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
    >

    <LinearLayout
        style="@style/HobbyistHelpFragmentStyle"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/wifire"
            android:textSize="@dimen/help_information_subtitle_text_size"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/help_wifi_network_information"
            android:textSize="@dimen/help_information_text_size"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/wifi_setup_mode"
            android:textSize="@dimen/help_information_subtitle_text_size"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/help_wifi_network_information_setup_mode"
            android:textSize="@dimen/help_information_text_size"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/wifi_connected_mode"
            android:textSize="@dimen/help_information_subtitle_text_size"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/help_wifi_network_information_connected_mode"
            android:textSize="@dimen/help_information_text_size"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/switching_between_wifis"
            android:textSize="@dimen/help_information_subtitle_text_size"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <WebView
            android:id="@+id/webViewTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</ScrollView>