<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ <b>Copyright 2014 by Imagination Technologies Limited
  ~ and/or its affiliated group companies.</b>\n
  ~ All rights reserved.  No part of this software, either
  ~ material or conceptual may be copied or distributed,
  ~ transmitted, transcribed, stored in a retrieval system
  ~ or translated into any human or computer language in any
  ~ form by any means, electronic, mechanical, manual or
  ~ other-wise, or disclosed to the third parties without the
  ~ express written permission of Imagination Technologies
  ~ Limited, Home Park Estate, Kings Langley, Hertfordshire,
  ~ WD4 8LZ, U.K.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/HobbyistFragmentStyle"
              android:weightSum="7"
              android:orientation="vertical"
    >

    <Button
        android:id="@+id/introduction"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:singleLine="true"
        android:text="@string/introduction"
        android:background="@drawable/green_button_selector"
        android:layout_weight="1"
        android:layout_marginBottom="15dp"
        />

    <Button
        android:id="@+id/wirelessNetworks"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:singleLine="true"
        android:text="@string/wireless_network"
        android:background="@drawable/green_button_selector"
        android:layout_weight="1"
        android:layout_marginBottom="15dp"
        />

    <Button
        android:id="@+id/deviceSetup"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:singleLine="true"
        android:text="@string/device_setup"
        android:background="@drawable/green_button_selector"
        android:layout_weight="1"
        android:layout_marginBottom="15dp"
        />

    <Button
        android:id="@+id/usingTheApp"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:singleLine="true"
        android:text="@string/using_the_app"
        android:background="@drawable/green_button_selector"
        android:layout_weight="1"
        android:layout_marginBottom="15dp"
        />

    <Button
        android:id="@+id/usingTheBoard"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:singleLine="true"
        android:text="@string/using_the_board"
        android:background="@drawable/green_button_selector"
        android:layout_weight="1"
        android:layout_marginBottom="15dp"
        />

    <Button
        android:id="@+id/troubleshooting"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:singleLine="true"
        android:text="@string/troubleshooting"
        android:background="@drawable/green_button_selector"
        android:layout_weight="1"
        android:layout_marginBottom="15dp"
        />

    <Button
        android:id="@+id/flowCloudForum"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:singleLine="true"
        android:text="@string/flow_cloud_forum"
        android:background="@drawable/green_button_selector"
        android:layout_weight="1"
        />
</LinearLayout>