<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ <b>Copyright 2014 by Imagination Technologies Limited
  ~ and/or its affiliated group companies.</b>\n
  ~ All rights reserved.  No part of this software, either
  ~ material or conceptual may be copied or distributed,
  ~ transmitted, transcribed, stored in a retrieval system
  ~ or translated into any human or computer language in any
  ~ form by any means, electronic, mechanical, manual or
  ~ other-wise, or disclosed to the third parties without the
  ~ express written permission of Imagination Technologies
  ~ Limited, Home Park Estate, Kings Langley, Hertfordshire,
  ~ WD4 8LZ, U.K.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="center"
        android:text="@string/provide_static_configuration"
        android:textSize="@dimen/small_label_text_size"
        android:layout_marginBottom="@dimen/standard_space_between_views"
        />

    <EditText
        style="@style/RoundedEditText"
        android:id="@+id/ipField"
        android:inputType="phone"
        android:textColorHint="@color/gray"
        android:hint="@string/ip"
        android:layout_marginBottom="@dimen/standard_space_between_views"
        />

    <EditText
        style="@style/RoundedEditText"
        android:id="@+id/dnsField"
        android:inputType="phone"
        android:textColorHint="@color/gray"
        android:hint="@string/dns"
        android:layout_marginBottom="@dimen/standard_space_between_views"
        />

    <EditText
        style="@style/RoundedEditText"
        android:id="@+id/netmaskField"
        android:inputType="phone"
        android:textColorHint="@color/gray"
        android:hint="@string/netmask"
        android:layout_marginBottom="@dimen/standard_space_between_views"
        />

    <EditText
        style="@style/RoundedEditText"
        android:id="@+id/gatewayAddressField"
        android:inputType="phone"
        android:textColorHint="@color/gray"
        android:hint="@string/gateway_address"
        android:layout_marginBottom="@dimen/standard_space_between_views"
        />

</LinearLayout>